# weather-app

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml
app/: mypy.ini  pyproject.toml  requirements.txt
app/common/: utils.py
app/common/admin/: utils.py
app/common/csv/: exceptions.py  parsers.py  readers.py  rows.py
app/common/date/: utils.py
app/config/: settings.py  urls.py
app/data/: precipitation.csv
app/weather/: admin.py  exceptions.py  forms.py  models.py  types.py  urls.py  views.py
app/weather/management/commands/: seed_precipitation.py
app/weather/migrations/: 0001_initial.py  0002_alter_precipitationmeasurement_table.py
app/weather/services/: csv_importer.py  precipitation_statistics.py
app/weather/static/weather/css/: app.css  base.css  layout.css
app/weather/static/weather/css/components/: buttons.css  cards.css  feedback.css  forms.css  modal.css  table.css
app/weather/static/weather/js/: precipitation_statistics.js
app/weather/templates/: base.html
app/weather/templates/weather/: precipitation_list.html  precipitation_upload.html
docker/django/: Dockerfile
docker/mssql/: init-db.sql
